# FFT2OSC

./: .gitignore  .gitmodules  CMakeLists.txt  FLAGS.md  README.md  run_sender.sh
scripts/: osc_debug_listener.py  restart_fftosc.sh
src/: FFTOSC.cpp  FFTOSC.h  Main.cpp
